--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
 
 	<p>If you want to play around, try this <a href="http://plnkr.co/edit/n2bShO?p=preview">plunker</a></p>
 
+	<p class="text-justify">
+		clone the repository or install with bower: <pre style="display: inline-block"><code>bower install angular-smart-table</code></pre>
+	</p>
+
 	<div class="text-center">
 		<a class="btn btn-primary"
 			 href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/Introduction"><i
@@ -93,7 +97,7 @@
 	<h2 class="h2">The basics</h2>
 	<div class="row">
 		<p class="text-justify">
-			The first thing is to add the module <code>angular.module('myApp',['smart-table']</code> to you angular
+			The first thing is to add the module <code>angular.module('myApp',['smart-table']</code> to your angular
 			application.
 			Then use the markup you would normally do
 			for html tables. On the table element add the <code>st-table</code> attribute to tell smart-table which collection
