--- a/sections/Introduction/markup.html
+++ b/sections/Introduction/markup.html
@@ -32,6 +32,10 @@
 
 	<p>If you want to play around, try this <a href="http://plnkr.co/edit/n2bShO?p=preview">plunker</a></p>
 
+	<p class="text-justify">
+		clone the repository or install with bower: <pre style="display: inline-block"><code>bower install angular-smart-table</code></pre>
+	</p>
+
 	<div class="text-center">
 		<a class="btn btn-primary"
 			 href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/Introduction"><i
