[DC] Language edit - from far -> by far

--- a/sections/Introduction/markup.html
+++ b/sections/Introduction/markup.html
@@ -26,7 +26,7 @@
                 </li>
             </ul>
     </ul>
-    <p>Although smart-table is from far the best table module for angular :D, there are other table modules in the
+    <p>Although smart-table is by far the best table module for angular :D, there are other table modules in the
         angular ecosystem you might be interested in. The approach and philosophy are different and maybe more appropriate to your way of building web application. Among the most popular:</p>
     <ul>
         <li><a href="http://angular-ui.github.io/ng-grid/">ng-grid</a></li>
