--- a/sections/Introduction/markup.html
+++ b/sections/Introduction/markup.html
@@ -22,7 +22,7 @@
 			easy to get into the source code to modify/customise the module to best fit your needs.
 	</ul>
 	</div>
-	<p>Although smart-table is from far the best table module for angular :D, there are other table modules in the
+	<p>Although smart-table is by far the best table module for angular :D, there are other table modules in the
 		angular ecosystem you might be interested in. The approach and philosophy are different and maybe more appropriate
 		to your way of building web application. Among the most popular:</p>
 	<ul>
