--- a/sections/head/markup.html
+++ b/sections/head/markup.html
@@ -6,7 +6,7 @@
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-	<script src="bower_components/angular-smart-table/dist/smart-table.debug.js"></script>
+	<script src="bower_components/angular-smart-table/dist/smart-table.js"></script>
 	<script src="assets/js/app.js"></script>
 	<link rel="stylesheet" href="assets/css/mainStyle.css"/>
 	<link rel="stylesheet" href="assets/lib/prism/prism.css"/>
