--- a/sections/filter/markup.html
+++ b/sections/filter/markup.html
@@ -2,7 +2,7 @@
     <h2 class="h2">Search/filter data</h2>
     <p>
 			The <code>stSearch</code> gives you a way to filter rows globally if you don't set any value to the attribute. Or you can also define the predicate to use as value of the directive attribute.
-			Use a property name between a single quote, or alternatively you can bind the predicate to a scope property
+			Use a property name, or alternatively you can interpolate the predicate with a scope property
     </p>
     <tabset><tab heading="markup">
 <pre ng-non-bindable><code class="language-markup">&lt;form>
@@ -20,13 +20,13 @@
 	&lt;/tr>
 	&lt;tr>
 		&lt;th>
-			&lt;input st-search="'firstName'" placeholder="search for firstname" class="input-sm form-control" type="search"/>
+			&lt;input st-search="firstName" placeholder="search for firstname" class="input-sm form-control" type="search"/>
 		&lt;/th>
 		&lt;th colspan="3">
 			&lt;input st-search placeholder="global search" class="input-sm form-control" type="search"/>
 		&lt;/th>
 		&lt;th>
-			&lt;input st-search="selectedPredicate" placeholder="bound predicate" class="input-sm form-control" type="search"/>
+			&lt;input st-search="{{selectedPredicate}}" placeholder="bound predicate" class="input-sm form-control" type="search"/>
 		&lt;/th>
 	&lt;/tr>
 	&lt;/thead>
@@ -70,13 +70,13 @@
 			</tr>
 			<tr>
 				<th>
-					<input st-search="'firstName'" placeholder="search for firstname" class="input-sm form-control" type="search"/>
+					<input st-search="firstName" placeholder="search for firstname" class="input-sm form-control" type="search"/>
 				</th>
 				<th colspan="3">
 					<input st-search placeholder="global search" class="input-sm form-control" type="search"/>
 				</th>
 				<th>
-					<input st-search="selectedPredicate" placeholder="bound predicate" class="input-sm form-control" type="search"/>
+					<input st-search="{{selectedPredicate}}" placeholder="bound predicate" class="input-sm form-control" type="search"/>
 				</th>
 			</tr>
 			</thead>
