--- a/sections/pipe/markup.html
+++ b/sections/pipe/markup.html
@@ -21,10 +21,10 @@
 		&lt;th st-sort="saved">saved people&lt;/th>
 	&lt;/tr>
 	&lt;tr>
-		&lt;th>&lt;input st-search="'id'"/>&lt;/th>
-		&lt;th>&lt;input st-search="'name'"/>&lt;/th>
-		&lt;th>&lt;input st-search="'age'"/>&lt;/th>
-		&lt;th>&lt;input st-search="'saved'"/>&lt;/th>
+		&lt;th>&lt;input st-search="id"/>&lt;/th>
+		&lt;th>&lt;input st-search="name"/>&lt;/th>
+		&lt;th>&lt;input st-search="age"/>&lt;/th>
+		&lt;th>&lt;input st-search="saved"/>&lt;/th>
 	&lt;/tr>
 	&lt;/thead>
 	&lt;tbody ng-show="!mc.isLoading">
@@ -143,10 +143,10 @@
 				<th st-sort="saved">saved people</th>
 			</tr>
 			<tr>
-				<th><input st-search="'id'"/></th>
-				<th><input st-search="'name'"/></th>
-				<th><input st-search="'age'"/></th>
-				<th><input st-search="'saved'"/></th>
+				<th><input st-search="id"/></th>
+				<th><input st-search="name"/></th>
+				<th><input st-search="age"/></th>
+				<th><input st-search="saved"/></th>
 			</tr>
 			</thead>
 			<tbody ng-show="!mc.isLoading">
