Improve pipe documentation

--- a/sections/pipe/markup.html
+++ b/sections/pipe/markup.html
@@ -1,4 +1,4 @@
-<section id="section-pipe" class="clearfix" ng-controller="pipeCtrl">
+<section id="section-pipe" class="clearfix" ng-controller="pipeCtrl as mc">
 	<h2 class="h2">pipe/ajax plugin</h2>
 	<p>
 		This might be the most powerful plugin. When a directive calls the table controller api (sortBy, search, slice, ...) a variable representing the internal
