add custom paginator example

--- a/index.html
+++ b/index.html
@@ -1109,6 +1109,16 @@ app.directive('csSelect', function () {
 		</iframe>
 	</div>
 
+	<h3 class="h3">Custom pagination</h3>
+	<p>This example shows how to use a custom template for the paginator, and how you can add more advanced functionality such as an input field to jump to any page easily (great for very large sets of data).</p>
+	<div class="text-center">
+		<iframe style="border: 1px solid #999;width: 80%; height: 560px"
+						src="http://embed.plnkr.co/LB2f9P" frameborder="0"
+						allowfullscreen="allowfullscreen">
+			Loading plunk...
+		</iframe>
+	</div>
+
 </section>
 </div>
 <footer class="padding" id="main-footer" class="center-block">
