made the change on non build files

--- a/sections/Introduction/markup.html
+++ b/sections/Introduction/markup.html
@@ -30,7 +30,7 @@
 		<li><a href="http://esvit.github.io/ng-table/#!/">ng-table</a></li>
 	</ul>
 
-	<p>If you want to play around, try this <a href="http://plnkr.co/edit/n2bShO?p=preview">plunker</a></p>
+  <p>If you want to play around, try this <a href="http://plnkr.co/edit/OGq29V?p=preview">plunker</a></p>
 
 	<p class="text-justify">
 		clone the repository or install with bower: <pre style="display: inline-block"><code>bower install angular-smart-table</code></pre>
