--- a/sections/pagination/markup.html
+++ b/sections/pagination/markup.html
@@ -2,10 +2,10 @@
 	<h2 class="h2">Client side Pagination</h2>
 
 	<p class="text-center">
-		This is actually the only plugin which defines its own template. But the template fits good with the popular css
-		library <em>bootstrap</em> from Twitter.
+		This is plugin has own template that fits good with the popular css library <em>bootstrap</em> from Twitter.
+		You can add the attribute <code>st-template</code> with URL of custom pagination template.
 		You can also change the number of items by page dynamically with the bound attribute <code>st-items-by-page</code> and the number of displayed pages in the pagination directive with the attribute <code>st-displayed-pages</code>.
-		You can set these attributes to a static value as well
+		You can set these attributes to a static value as well.
 	</p>
 	<tabset><tab heading="markup">
 <pre ng-non-bindable><code class="language-markup">&lt;table st-table="rowCollection" class="table table-striped">
