--- a/sections/Introduction/markup.html
+++ b/sections/Introduction/markup.html
@@ -35,6 +35,9 @@
 	<p class="text-justify">
 		clone the repository or install with bower: <pre style="display: inline-block"><code>bower install angular-smart-table</code></pre>
 	</p>
+	<p class="text-justify">
+		Or use npm: <pre style="display: inline-block"><code>npm install angular-smart-table</code></pre>
+	</p>
 
 	<div class="text-center">
 		<a class="btn btn-primary"
