--- a/sections/pipe/markup.html
+++ b/sections/pipe/markup.html
@@ -138,7 +138,7 @@
 			<thead>
 			<tr>
 				<th st-sort="id">id</th>
-				<th st-sort="name">name</th>
+				<th st-sort-default="reverse" st-sort="name">name</th>
 				<th st-sort="age">age</th>
 				<th st-sort="saved">saved people</th>
 			</tr>
