--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 	<p class="text-justify">
 		clone the repository or install with bower: <pre style="display: inline-block"><code>bower install angular-smart-table</code></pre>
 	</p>
+	<p class="text-justify">
+		Or use npm: <pre style="display: inline-block"><code>npm install angular-smart-table</code></pre>
+	</p>
 
 	<div class="text-center">
 		<a class="btn btn-primary"
@@ -910,7 +913,7 @@
 			<thead>
 			<tr>
 				<th st-sort="id">id</th>
-				<th st-sort="name">name</th>
+				<th st-sort-default="reverse" st-sort="name">name</th>
 				<th st-sort="age">age</th>
 				<th st-sort="saved">saved people</th>
 			</tr>
