--- a/sections/sort/markup.html
+++ b/sections/sort/markup.html
@@ -68,11 +68,26 @@
 	</div>
 
 	<p class="bg-info padding text-justify">
-		Note you can ask to sort a column by default by adding the attribute <code>st-sort-default</code>. And if you set the value of this attribute to <code>"reverse"</code> then it will sort this column and reverse the order by default.
+		Note you can ask to sort a column by default by adding the attribute <code>st-sort-default="true"</code>. And if you set the value of this attribute to <code>"reverse"</code> then it will sort this column and reverse the order by default.
 	</p>
 
 	<p class="bg-info padding text-justify">
 		You can skip the "natural order" state by adding <code>st-skip-natural="true"</code> as attribute of your th element.
+	</p>
+
+	<p class="padding text-justify">
+		smart-table add css classes when the sort state changes <code>st-sort-ascent</code> and <code>st-sort-descent</code>. If you use a third party css framework with specific class names you can overwrite the default ones by passing the attributes
+		<code>st-class-ascent="myClassName"</code> and <code>st-class-descent="className"</code>.
+		The css used for this website is
+		<pre><code class="language-css">
+  .st-sort-ascent:before{
+    content: '\25B2';
+  }
+
+  .st-sort-descent:before{
+    content: '\25BC';
+  }
+</code></pre>
 	</p>
 
 	<div class="text-center"><a class="btn btn-primary" href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/sort"><i
