Took out the single quotes to make search work.
The search for the first names did not work, so it turned to be the syntax error. The single quotes around the firstName are not needed. I deleted them and they worked afterwards.

--- a/sections/pagination/markup.html
+++ b/sections/pagination/markup.html
@@ -19,7 +19,7 @@
 		&lt;/tr>
 		&lt;tr>
 			&lt;th>
-				&lt;input st-search="'firstName'" placeholder="search for firstname" class="input-sm form-control" type="search"/>
+				&lt;input st-search="firstName" placeholder="search for firstname" class="input-sm form-control" type="search"/>
 			&lt;/th>
 			&lt;th colspan="4">
 				&lt;input st-search placeholder="global search" class="input-sm form-control" type="search"/>
