--- a/sections/filter/markup.html
+++ b/sections/filter/markup.html
@@ -96,6 +96,11 @@
 		Note there is a throttle of 400 ms by default which you can overwrite with the attribute <code>st-delay</code>
 	</p>
 
+	<p class="bg-info padding text-justify">
+		By default the search will be triggered on the `input` event but you can change it using the attribute ``stInputEvent``
+		<pre ng-non-bindable><code class="language-markup">&lt;select stInputEvent="change" st-search="myProp">&lt;/select></code></pre>
+	</p>
+
 	<div class="text-center">
 		<a class="btn btn-primary" href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/filter"><i class="glyphicon glyphicon-pencil"></i> improve the documentation</a>
 	</div>
