--- a/sections/filter/markup.html
+++ b/sections/filter/markup.html
@@ -97,8 +97,8 @@
 	</p>
 
 	<p class="bg-info padding text-justify">
-		By default the search will be triggered on the `input` event but you can change it using the attribute ``stInputEvent``
-		<pre ng-non-bindable><code class="language-markup">&lt;select stInputEvent="change" st-search="myProp">&lt;/select></code></pre>
+		By default the search will be triggered on the <code>input</code> event but you can change it using the attribute <code>st-input-event</code>
+		<pre ng-non-bindable><code class="language-markup">&lt;select st-input-event="change" st-search="myProp">&lt;/select></code></pre>
 	</p>
 
 	<div class="text-center">
