--- a/sections/plugins/markup.html
+++ b/sections/plugins/markup.html
@@ -1,5 +1,5 @@
 <section class="clearfix" id="section-custom" ng-controller="customCtrl">
-		<h2 class="h2">Create you own plugin</h2>
+		<h2 class="h2">Create your own plugin</h2>
 	<p class="text-justify">
 		It is pretty easy to plug your own plugin into smart table. You just have to require the main directive so you will get access to the controller API.
 		Let's have an example: I want my plugin to give me a way to select data with a check box.
