update link to ui-grid

--- a/sections/Introduction/markup.html
+++ b/sections/Introduction/markup.html
@@ -26,7 +26,7 @@
 		angular ecosystem you might be interested in. The approach and philosophy are different and maybe more appropriate
 		to your way of building web application. Among the most popular:</p>
 	<ul>
-		<li><a href="http://angular-ui.github.io/ng-grid/">ng-grid</a></li>
+		<li><a href="http://ui-grid.info/">UI Grid</a></li>
 		<li><a href="http://esvit.github.io/ng-table/#!/">ng-table</a></li>
 	</ul>
 
