Improved documentation on filtering

--- a/sections/head/markup.html
+++ b/sections/head/markup.html
@@ -24,13 +24,27 @@
 			<li><a href="#section-intro">Introduction</a></li>
 			<li><a href="#section-basics">The basics</a></li>
 			<li><a href="#section-format">Format/Template</a></li>
+            <li class="dropdown">
+                <a role="button" class="dropdown-toggle">
+                    Filter data <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="#section-filter">Search plugin</a></li>
+                    <li><a href="#filter-strict-mode">Strict mode</a></li>
+                    <li><a href="#filter-custom-plugin">Custom search plugins</a></li>
+                </ul>
+            </li>
 			<li class="dropdown">
 				<a role="button" class="dropdown-toggle">
 					Plugins <b class="caret"></b>
 				</a>
 				<ul class="dropdown-menu">
+                    <!--<li class="dropdown-header">Filter data</li>-->
+                    <!--<li><a href="#section-filter">stSearch plugin</a></li>-->
+                    <!--<li><a href="#filter-strict-mode">Strict mode</a></li>-->
+                    <!--<li><a href="#filter-custom-plugin">Custom search plugins</a></li>-->
+                    <!--<li class="dropdown-header">Other plugins</li>-->
 					<li><a href="#section-sort">Sort data</a></li>
-					<li><a href="#section-filter">Filter data</a></li>
 					<li><a href="#section-selection">Select row(s)</a></li>
 					<li><a href="#section-pagination">Pagination</a></li>
 					<li><a href="#section-pipe">Pipe/Ajax</a></li>
