--- a/index.html
+++ b/index.html
@@ -24,13 +24,27 @@
 			<li><a href="#section-intro">Introduction</a></li>
 			<li><a href="#section-basics">The basics</a></li>
 			<li><a href="#section-format">Format/Template</a></li>
+            <li class="dropdown">
+                <a role="button" class="dropdown-toggle">
+                    Filter data <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="#section-filter">Search plugin</a></li>
+                    <li><a href="#filter-strict-mode">Strict mode</a></li>
+                    <li><a href="#filter-custom-plugin">Custom search plugins</a></li>
+                </ul>
+            </li>
 			<li class="dropdown">
 				<a role="button" class="dropdown-toggle">
 					Plugins <b class="caret"></b>
 				</a>
 				<ul class="dropdown-menu">
+                    <!--<li class="dropdown-header">Filter data</li>-->
+                    <!--<li><a href="#section-filter">stSearch plugin</a></li>-->
+                    <!--<li><a href="#filter-strict-mode">Strict mode</a></li>-->
+                    <!--<li><a href="#filter-custom-plugin">Custom search plugins</a></li>-->
+                    <!--<li class="dropdown-header">Other plugins</li>-->
 					<li><a href="#section-sort">Sort data</a></li>
-					<li><a href="#section-filter">Filter data</a></li>
 					<li><a href="#section-selection">Select row(s)</a></li>
 					<li><a href="#section-pagination">Pagination</a></li>
 					<li><a href="#section-pipe">Pipe/Ajax</a></li>
@@ -77,7 +91,7 @@
 		angular ecosystem you might be interested in. The approach and philosophy are different and maybe more appropriate
 		to your way of building web application. Among the most popular:</p>
 	<ul>
-		<li><a href="http://angular-ui.github.io/ng-grid/">ng-grid</a></li>
+		<li><a href="http://ui-grid.info/">UI Grid</a></li>
 		<li><a href="http://esvit.github.io/ng-table/#!/">ng-table</a></li>
 	</ul>
 
@@ -96,6 +110,7 @@
 			class="glyphicon glyphicon-pencil"></i> Improve the documentation</a>
 	</div>
 </section>
+
 <section class="clearfix container-fluid" id="section-basics" ng-controller="basicsCtrl">
 	<h2 class="h2">The basics</h2>
 	<div class="row">
@@ -596,14 +611,166 @@
 	</p>
 
 	<p class="bg-info padding text-justify">
-		By default the search will be triggered on the `input` event but you can change it using the attribute ``stInputEvent``
-		<pre ng-non-bindable><code class="language-markup">&lt;select stInputEvent="change" st-search="myProp">&lt;/select></code></pre>
+		By default the search will be triggered on the <code>input</code> event but you can change it using the attribute <code>st-input-event</code>
+		<pre ng-non-bindable><code class="language-markup">&lt;select st-input-event="change" st-search="myProp">&lt;/select></code></pre>
 	</p>
 
 	<div class="text-center">
 		<a class="btn btn-primary" href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/filter"><i class="glyphicon glyphicon-pencil"></i> improve the documentation</a>
 	</div>
+
+    <h3 id="filter-strict-mode">Strict mode filtering</h3>
+
+    <p>
+        The <code>stSetFilter</code> replaces the filter used when searching through Smart Table.
+        When the default behavior for <code>stSearch</code> does not meet your demands, like in a select where one entry is a substring of another, use a custom filter to achieve your goals.
+    </p>
+
+    <tabset><tab heading="markup">
+<pre ng-non-bindable><code class="language-markup">&lt;table st-safe-src="rowCollection" st-table="displayCollection" st-set-filter="myStrictFilter" class="table table-striped">
+    &lt;thead>
+        &lt;tr>
+            &lt;th st-sort="firstName">first name&lt;/th>
+            &lt;th st-sort="lastName">last name&lt;/th>
+            &lt;th st-sort="strictSearchValue">strict search&lt;/th>
+            &lt;th st-sort="strictSelectValue">strict select&lt;/th>
+        &lt;/tr>
+        &lt;tr>
+            &lt;th>
+                &lt;input st-search="firstName" placeholder="search for firstname" class="input-sm form-control" type="search"/>
+            &lt;/th>
+            &lt;th>
+                &lt;input st-search="lastName" placeholder="search for lastname" class="input-sm form-control" type="search"/>
+            &lt;/th>
+            &lt;th>
+                &lt;input st-search="strictSearchValue" placeholder="search for equal match" class="input-sm form-control" type="search"/>
+            &lt;/th>
+            &lt;th>
+                &lt;select st-search="strictSelectValue">
+                    &lt;option value="">All&lt;/option>
+                    &lt;option ng-repeat="row in rowCollection | unique:'strictSelectValue'" value="{{row.strictSelectValue}}">{{row.strictSelectValue}}&lt;/option>
+                &lt;/select>
+            &lt;/th>
+        &lt;/tr>
+    &lt;/thead>
+    &lt;tbody>
+        &lt;tr ng-repeat="row in displayCollection">
+            &lt;td>{{row.firstName | uppercase}}&lt;/td>
+            &lt;td>{{row.lastName}}&lt;/td>
+            &lt;td>{{row.strictSearchValue}}&lt;/td>
+            &lt;td>{{row.strictSelectValue}}&lt;/td>
+        &lt;/tr>
+    &lt;/tbody>
+&lt;/table></code></pre>
+    </tab>
+        <tab heading="JavaScript">
+<pre><code class="language-javascript">app.controller('filterCtrl', ['$scope', '$filter', function (scope, filter) {
+    scope.rowCollection = [
+        {firstName: 'Laurent', lastName: 'Renard', birthDate: new Date('1987-05-21'), balance: 102, email: 'whatever@gmail.com', strictSearchValue: "abc", strictSelectValue: "ab"},
+        {firstName: 'Blandine', lastName: 'Faivre', birthDate: new Date('1987-04-25'), balance: -2323.22, email: 'oufblandou@gmail.com', strictSearchValue: "ab", strictSelectValue: "abc"},
+        {firstName: 'Francoise', lastName: 'Frere', birthDate: new Date('1955-08-27'), balance: 42343, email: 'raymondef@gmail.com', strictSearchValue: "abc", strictSelectValue: "abc"}
+    ];
+
+    scope.displayCollection = [].concat(scope.rowCollection);
+
+    scope.predicates = ['firstName', 'lastName', 'birthDate', 'balance', 'email'];
+    scope.selectedPredicate = scope.predicates[0];
+]);
+
+app.filter('myStrictFilter', function($filter){
+    return function(input, predicate){
+        return $filter('filter')(input, predicate, true);
+    }
+});
+
+app.filter('unique', function() {
+    return function (arr, field) {
+        var o = {}, i, l = arr.length, r = [];
+        for(i=0; i&lt;l;i+=1) {
+            o[arr[i][field]] = arr[i];
+        }
+        for(i in o) {
+            r.push(o[i]);
+        }
+        return r;
+    };
+  })</code></pre>
+        </tab>
+    </tabset>
+
+    <div class="table-container">
+        <table st-safe-src="rowCollection" st-table="displayCollection" st-set-filter="myStrictFilter" class="table table-striped">
+            <thead>
+            <tr>
+                <th st-sort="firstName">first name</th>
+                <th st-sort="lastName">last name</th>
+                <th st-sort="strictSearchValue">strict search</th>
+                <th st-sort="strictSelectValue">strict select</th>
+            </tr>
+            <tr>
+                <th>
+                    <input st-search="firstName" placeholder="search for firstname" class="input-sm form-control" type="search"/>
+                </th>
+                <th>
+                    <input st-search="lastName" placeholder="search for lastname" class="input-sm form-control" type="search"/>
+                </th>
+                <th>
+                    <input st-search="strictSearchValue" placeholder="search for equal match" class="input-sm form-control" type="search"/>
+                </th>
+                <th>
+                    <select st-search="strictSelectValue">
+                        <option value="">All</option>
+                        <option ng-repeat="row in rowCollection | unique:'strictSelectValue'" value="{{row.strictSelectValue}}">{{row.strictSelectValue}}</option>
+                    </select>
+                </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="row in displayCollection">
+                <td>{{row.firstName | uppercase}}</td>
+                <td>{{row.lastName}}</td>
+                <td>{{row.strictSearchValue}}</td>
+                <td>{{row.strictSelectValue}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <p class="bg-info padding text-justify">
+        Note that <code>st-safe-src</code> is required for the select to properly display all distinct elements in the collection.
+        Should this be omitted, the select would only contain values from elements visible in table, also affected by paging.
+    </p>
+
+    <h3 class="h3" id="filter-custom-plugin">Custom search plugins</h3>
+
+    <p>
+        It is easy to write advanced plugins to smart table.
+        The following example shows how you can develop a dropdown to filter on a specific value or a multiple selection plugin which lets you filter in a excel-like style.
+    </p>
+
+    <div class="text-center">
+        <iframe style="border: 1px solid #999;width: 80%; height: 500px"
+                src="http://embed.plnkr.co/SOcUk1" frameborder="0"
+                allowfullscreen="allowfullscreen">
+            Loading plunk...
+        </iframe>
+    </div>
+
+    <h3>Date and numeric filtering</h3>
+
+    <p>
+        In this example, date range or number range may filter data.
+    </p>
+
+    <div class="text-center">
+        <iframe style="border: 1px solid #999;width: 80%; height: 500px"
+                src="http://embed.plnkr.co/Idbc1JNHKylHuX6mNwZ6" frameborder="0"
+                allowfullscreen="allowfullscreen">
+            Loading plunk...
+        </iframe>
+    </div>
 </section>
+
 <section class="clearfix" id="section-selection" ng-controller="selectionCtrl">
     <h2 class="h2">Select data rows</h2>
     <p class="text-justify">
@@ -987,7 +1154,7 @@
 
 </section>
 <section class="clearfix" id="section-custom" ng-controller="customCtrl">
-		<h2 class="h2">Create you own plugin</h2>
+		<h2 class="h2">Create your own plugin</h2>
 	<p class="text-justify">
 		It is pretty easy to plug your own plugin into smart table. You just have to require the main directive so you will get access to the controller API.
 		Let's have an example: I want my plugin to give me a way to select data with a check box.
@@ -1095,6 +1262,7 @@ app.directive('csSelect', function () {
 
 
 </section>
+
 <section class="clearfix" id="examples-section">
 	<h2 class="h2">More sophisticated examples</h2>
 
