add video example

--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
 			easy to get into the source code to modify/customise the module to best fit your needs.
 	</ul>
 	</div>
+
+	<div class="text-center">
+		<p>An example of server side driven smart-table used for <a href="http://reactcrm.com/">React CRM</a></p>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/UO84M__kqDA?rel=0" frameborder="0" allowfullscreen></iframe>
+	</div>
+
 	<p>Although smart-table is by far the best table module for angular :D, there are other table modules in the
 		angular ecosystem you might be interested in. The approach and philosophy are different and maybe more appropriate
 		to your way of building web application. Among the most popular:</p>
