fix(pipe): page calculation

--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@ app.filter('unique', function() {
 			//note, the server passes the information about the data set size
 			deferred.resolve({
 				data: result,
-				numberOfPages: Math.ceil(1000 / number)
+				numberOfPages: Math.ceil(filtered.length / number)
 			});
 		}, 1500);
 
