--- a/sections/basics/markup.html
+++ b/sections/basics/markup.html
@@ -2,11 +2,11 @@
 	<h2 class="h2">The basics</h2>
 	<div class="row">
 		<p class="text-justify">
-			The first thing is to add the module <code>angular.module('myApp',['smart-table']</code> to your angular
+			The first thing is to add the module <code>angular.module('myApp',['smart-table'])</code> to your angular
 			application.
 			Then use the markup you would normally do
 			for html tables. On the table element add the <code>st-table</code> attribute to tell smart-table which collection
-			holds your <strong>displayed data</strong>, (ie the one you are going to use in the repeater). Now you will be able to compose the table using the plugins.
+			holds your <strong>displayed data</strong>, (i.e. the one you are going to use in the repeater). Now you will be able to compose the table using the plugins.
 		</p>
 	</div>
 			<tabset>
