--- a/sections/Introduction/markup.html
+++ b/sections/Introduction/markup.html
@@ -33,5 +33,5 @@
         <li><a href="http://esvit.github.io/ng-table/#!/">ng-table</a></li>
     </ul>
 
-    <p>If you want to play around, try this <a href="http://plnkr.co/edit/8Qectt?p=preview">plunker</a></p>
+    <p>If you want to play around with smart-table, try this <a href="http://plnkr.co/edit/8Qectt?p=preview">plunker</a></p>
 </section>
