--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@ app.filter('unique', function() {
 	<h2 class="h2">Client side Pagination</h2>
 
 	<p class="text-center">
-		This is actually the only plugin which defines its own template. But the template fits good with the popular css
+		This is actually the only plugin which defines its own template. The template fits well with the popular css
 		library <em>bootstrap</em> from Twitter.
 		You can also change the number of items by page dynamically with the bound attribute <code>st-items-by-page</code> and the number of displayed pages in the pagination directive with the attribute <code>st-displayed-pages</code>.
 		You can set these attributes to a static value as well
