redirection to new site

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 <div class="main">
 <section id="section-intro" ng-controller="paginationCtrl">
 
-	<p style="margin-top:1em;" class="text-center padding bg-warning">The development of smart-table is sponsored by <a href="http://tropicaldev.com/">TropicalDev</a> </p>
+	<p style="margin-top:1em;font-size: 1.75em;" class="text-center padding bg-danger">
+		The next version of this project will be created as a binding for the more ambitious <a href="https://smart-table.github.io/www/dist/">new project</a>. Share the word or come and help over and let's create the best grid ecosystem ever!
+	</p>
 
 	<h2 class=".h2">Introduction</h2>
 
